# 01rcli-homework

./: Cargo.toml  README.md
fixtures/: text_to_decrypt.txt  text_to_encrypt.txt
fixtures/subdir/: subcontent.txt
src/: lib.rs  main.rs  utils.rs
src/cli/: http.rs  jwt.rs  mod.rs  text.rs
